Add registration form for school user

--- a/app.json
+++ b/app.json
@@ -22,13 +22,20 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/logo.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ivaneev.ivan.juniorhunt"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c8610e0b-84d5-4ee2-8bb4-46fdd766a372"
+      }
     }
   }
 }
