--- a/app.json
+++ b/app.json
@@ -21,6 +21,7 @@
 		},
 		"android": {
 			"versionCode": 1,
+			"softwareKeyboardLayoutMode": "pan",
 			"adaptiveIcon": {
 				"foregroundImage": "./assets/images/logo.png",
 				"backgroundColor": "#ffffff"
