--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "expo": "~46.0.9",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
+    "expo-device": "~4.3.0",
     "expo-font": "~10.2.0",
     "expo-image-picker": "~13.3.1",
     "expo-linking": "~3.2.2",
+    "expo-notifications": "~0.16.1",
     "expo-screen-orientation": "~4.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
+    "expo-updates": "~0.14.5",
     "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
