--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-paper": "^4.12.4",
     "react-native-phone-input": "^1.3.4",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.3.1",
