--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
-    "expo-updates": "~0.14.5",
+    "expo-updates": "~0.14.7",
     "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-paper": "^4.12.4",
     "react-native-phone-input": "^1.3.4",
     "react-native-phone-number-input": "^2.1.0",
@@ -55,6 +55,7 @@
     "@types/styled-components-react-native": "^5.1.3",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
+    "prettier": "^2.7.1",
     "react-test-renderer": "18.0.0",
     "typescript": "~4.3.5"
   },
